pixel_battle: 2018 update

--- a/pixel_battle/last.html
+++ b/pixel_battle/last.html
@@ -192,6 +192,11 @@ function forcereload() {
 
 
 window.onload = function() {
+    if (window.location.toString().indexOf('http://') === 0 ){
+        window.location = 'https://' + window.location.toString().substring(7);
+        return;
+    }
+
     configurePanZoom();
     configureAutoupdate();
     requestUpdate();
