pixel_battle: Some improvements

--- a/pixel_battle/last.html
+++ b/pixel_battle/last.html
@@ -170,6 +170,8 @@ function update(data) {
 
         pixelimg.onload = imgonload;
         pixelimg.src = src;
+    } else {
+        date.textContent = data.tm;
     }
 }
 
